force-app/main/default/objects/custom_create54__c/custom_create54__c.object-meta.xml
<CustomObject>
    <label>Custom created object54</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects54</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>