force-app/main/default/objects/custom_create54__c/fields/custom_create_54field585__c.field-meta.xml
<CustomField>
    <fullName>custom_create_54field585__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 54field585</label>
    <type>Checkbox</type>
</CustomField>